--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bower": "^1.3.7",
     "cors": "^2.4.1",
     "express": "*",
+    "mongodb": "^1.4.8",
     "mongoose": "^3.8.12",
     "ng-resource": "^1.2.18-2"
   },
